--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,4 +1,4 @@
-.bg{
+body{
     background-image: url('/public/bg.png');
     background-color: #000;
     background-repeat: no-repeat;
@@ -10,9 +10,9 @@
     text-align: center;
   }
 
-  .section {
+  /* .section {
     height: 100vh !important;
-  }
+  } */
   header a {
     color:#707070;
     width: 260px;
@@ -23,8 +23,31 @@
     padding-top: 10px;
   }
 
-  
+
   header a.active{
     color:#fff;
     border-top: 10px solid #fff;
   }
+
+  .ourServices::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgb(0 0 0 / 30%);
+    border-radius: 8px;
+    background-color: #f5f5f500;
+}
+
+.ourServices::-webkit-scrollbar
+{
+	width: 10px;
+    /* background-color: #100f0f; */
+    border: 1px solid #fff;
+}
+
+
+
+.ourServices::-webkit-scrollbar-thumb
+{
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 4px rgb(255 250 250);
+    background-color: #ffffff;
+}
