--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -5,15 +5,18 @@ body{
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
+    overflow: hidden;
   }
 
   header {
     text-align: center;
   }
 
-  /* .section {
-    height: 100vh !important;
-  } */
+  .section {
+    /* height: 100vh !important; */
+    max-width: 80%;
+    margin: 0 auto;
+  }
   header a {
     color:#707070;
     width: 260px;
@@ -32,7 +35,7 @@ body{
 
   .ourServices::-webkit-scrollbar-track
 {
-	-webkit-box-shadow: inset 0 0 6px rgb(0 0 0 / 30%);
+	shadow: inset 0 0 6px rgb(0 0 0 / 30%);
     border-radius: 8px;
     background-color: #f5f5f500;
 }
@@ -40,7 +43,7 @@ body{
 .ourServices::-webkit-scrollbar
 {
 	width: 10px;
-    /* background-color: #100f0f; */
+   
     border: 1px solid #fff;
 }
 
@@ -49,6 +52,6 @@ body{
 .ourServices::-webkit-scrollbar-thumb
 {
     border-radius: 10px;
-    -webkit-box-shadow: inset 0 0 4px rgb(255 250 250);
+    box-shadow: inset 0 0 4px rgb(255 250 250);
     background-color: #ffffff;
 }
