--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,57 +1,70 @@
-body{
-    background-image: url('/public/bg.png');
-    background-color: #000;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
-    overflow: hidden;
-  }
+body {
+  background-image: url("/public/bg.png");
+  background-color: #000;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  overflow: hidden;
+}
 
-  header {
-    text-align: center;
-  }
+header {
+  text-align: center;
+  position: fixed;
+  width: 100%;
+  height: 60px;
+}
 
-  .section {
-    /* height: 100vh !important; */
+
+
+header span {
+  color: #707070;
+  width: 260px;
+  font-size: 26px;
+  width: 220px;
+  display: inline-block;
+  text-decoration: none;
+  padding-top: 10px;
+}
+
+header span.active {
+  color: #fff;
+  border-top: 10px solid #fff;
+}
+
+.ourServices::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgb(0 0 0 / 30%);
+  border-radius: 8px;
+  background-color: #f5f5f500;
+}
+
+.ourServices::-webkit-scrollbar {
+  width: 10px;
+  border: 1px solid #fff;
+}
+
+.ourServices::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  box-shadow: inset 0 0 4px rgb(255 250 250);
+  background-color: #ffffff;
+}
+
+.ourServices{
+    height: 84vh;
+    overflow: auto;
+    color: #fff;
+    padding: 0 30px;
+    display: flex;
+    align-items: center;
+}
+
+.mainContainer{
     max-width: 80%;
+    width: 100%;
     margin: 0 auto;
-  }
-  header a {
-    color:#707070;
-    width: 260px;
-    font-size: 26px;
-    width: 220px;
-    display: inline-block;
-    text-decoration: none;
-    padding-top: 10px;
-  }
-
-
-  header a.active{
-    color:#fff;
-    border-top: 10px solid #fff;
-  }
-
-  .ourServices::-webkit-scrollbar-track
-{
-	shadow: inset 0 0 6px rgb(0 0 0 / 30%);
-    border-radius: 8px;
-    background-color: #f5f5f500;
-}
-
-.ourServices::-webkit-scrollbar
-{
-	width: 10px;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    padding-top: 60px;
    
-    border: 1px solid #fff;
-}
-
-
-
-.ourServices::-webkit-scrollbar-thumb
-{
-    border-radius: 10px;
-    box-shadow: inset 0 0 4px rgb(255 250 250);
-    background-color: #ffffff;
 }
