--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -71,11 +71,12 @@ header .logo{
 .ourServices {
   height: 80vh;
   overflow: auto;
+  overflow-x: hidden;
   color: #fff;
   padding: 0 35px;
-  display: flex;
+  /* display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: center; */
 }
 
 
@@ -83,6 +84,12 @@ header .logo{
     font-size: 96px;
     font-weight: 500;
     letter-spacing: 1px;
+    text-align: center;
+    margin: 0;
+    height: 80vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 
@@ -95,16 +102,64 @@ header .logo{
 
 .info{
     background-image: url("/public/bg_logo.png");
-   
     background-repeat: no-repeat;
- 
     background-position: center;
     position: absolute;
     top:0;
     bottom: 0;
     width: 100%;
     height: 100%;
-
-
-   
 }
+
+
+.sections{
+  width: 100%;
+  text-align: center;
+  position: relative;
+}
+
+.tabletimg{
+  position: absolute;
+    left: 50%;
+    right: 0;
+    top: 0;
+    margin-left: -350px;
+}
+
+.sections.active .tabletimg{
+	animation: grow 4s linear forwards;
+	opacity: 1;
+}
+
+@keyframes grow {
+	0%, 20% {
+		transform: scale(2);
+	}
+	
+	75%, 100% {
+		transform: scale(1);
+	}
+}
+
+.dairyimg{
+  position: absolute;
+  transition: all 5s ease;
+  right: -420px;
+  opacity: 0;
+  bottom: -830px;
+}
+
+.sections.active .dairyimg{
+  animation: mymove 5s linear;
+  transition-delay: 1s;
+  /* bottom: -860px; */
+  margin-right: 400px;
+  opacity: 1;
+  right: 0;
+}
+
+/* @keyframes mymove {
+  from {left: 0px;}
+  to {left: 0;}
+} */
+
