--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -15,15 +15,39 @@ body {
   width: 100%;
   padding: 0 15px;
 }
+.loaderData{
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    z-index: 22;
+    background-color: #000000;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
+    justify-content: center;
+}
+.loaderData h2{
+    text-align: center;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 30px;
+    font-weight: bold;
+    letter-spacing: 2px;
+    margin-top: 10px;
+}
 header {
   text-align: center;
   position: fixed;
   width: 100%;
   height: 60px;
   top: 0;
-
-
+  z-index: 11;
+  background-color: #000000;
   font-family: 'Open Sans', sans-serif;
+
 }
 
 header span {
@@ -34,6 +58,7 @@ header span {
   display: inline-block;
   text-decoration: none;
   padding-top: 10px;
+  cursor: pointer;
 }
 
 header span.active {
@@ -65,11 +90,11 @@ header .logo{
   max-width: 90%;
   width: 100%;
   margin: 0 auto;
-  padding-top: 60px;
-  position: relative;
+  padding-top: 30px;
+  /* position: relative; */
 }
 .ourServices {
-  overflow: auto;
+  overflow-y: auto;
   overflow-x: hidden;
   color: #fff;
   padding: 0 35px 0 25px;
@@ -77,8 +102,6 @@ header .logo{
   width: 100%;
   height: 100%;
   display: block;
-
-
   /* display: flex;
   align-items: center;
   justify-content: center; */
@@ -95,17 +118,62 @@ header .logo{
     display: flex;
     align-items: center;
     justify-content: center;
+    color: #fff;
+}
+.contact  h1, .about h1{
+    font-size: 60px;
+    font-weight: 500;
+    letter-spacing: 1px;
+    text-align: center;
+    margin: 0;
+    color: #fff;
+   
+}
+.contact  p, .about p{
+    font-size: 16px;
+    
+    text-align: center;
+    margin: 10px 0 0;
+    color: #fff;
+   
+}
+.about p{
+    max-width: 70%;
+    margin: 30px auto 0;
+}
+.formMain{
+
+ max-width: 480px;
+ margin: 20px auto 0;
 }
 
+.formMain input{
+    border-radius: 10px;
+    margin-bottom: 20px;
+}
+.formMain textarea{
+    border-radius: 10px;
+    margin-bottom: 20px;
+    height: 160px;
+}
 
+.formMain button{
+    height: 45px;
+    text-align: center;
+    background-color: #BDBDBD;
+    color: #000;
+    width: 100%;
+    border-radius: 10px;
+}
 .mousePointer{
     position: fixed;
     bottom: 30px;
     left: 50%;
     transform: translateX(-50%);
+    max-width: 30px;
 }
 
-.info{
+/* .info{
     background-image: url("/public/bg_logo.png");
     background-repeat: no-repeat;
     background-position: center;
@@ -114,9 +182,49 @@ header .logo{
     bottom: 0;
     width: 100%;
     height: 100%;
+} */
+
+.info img{ 
+    position: absolute;
+    z-index: -1;
+    max-width: 100%;
+    display: block;
+    /* margin: 0 auto; */
+    top: 0;
+    animation: zoomout 1s;
+    height: 100%;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
+.info h2{
+    text-align: center;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 34px;
+    font-weight: bold;
+    letter-spacing: 2px;
+    margin-bottom: 20px;
+}
+@keyframes zoomout{
+    0%{
+      transform: scale(1.3) translateX(-50%);
+    }
+    100%{
+      transform: scale(1) translateX(-50%);
+    }
+  }
+.info p{
+    text-align: center;
+    color: #fff;
+    font-size: 22px;
+ 
+   
+}
 
+.info.animate__animated{
+    animation-fill-mode: initial !important;
+}
 .sections{
   width: 100%;
   text-align: center;
