--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -98,17 +98,17 @@ header .logo{
   overflow-x: hidden;
   color: #fff;
   padding: 0 35px 0 25px;
-  -webkit-transform-style: preserve-3d;
-  width: 100%;
-  height: 100%;
+  /* -webkit-transform-style: preserve-3d; */
+  /* width: 100%;
+  height: 100vh;
   display: block;
-  /* display: flex;
-  align-items: center;
-  justify-content: center; */
+  position: sticky;
+  top:0 */
+ 
 }
 
 
-.ourServices  h1{
+.ourServices  h1.maintitle{
     font-size: 96px;
     font-weight: 500;
     letter-spacing: 1px;
@@ -244,19 +244,19 @@ header .logo{
   margin-left: -240px; 
 }
 
-.sections.active .tabletimg{
-	animation: grow 4s linear forwards;
-	opacity: 1;
+section.active .tabletimg{
+  animation: grow 4s linear forwards;
+  opacity: 1;
 }
 
 @keyframes grow {
-	0%, 20% {
-		transform: scale(2);
-	}
-	
-	75%, 100% {
-		transform: scale(.8);
-	}
+  0%, 20% {
+    transform: scale(2);
+  }
+  
+  75%, 100% {
+    transform: scale(.8);
+  }
 }
 
 .title1{
@@ -270,50 +270,47 @@ header .logo{
   display: inline;
 }
 
-.sections.active .title1{
-	animation: grows 4s linear forwards;
-	opacity: 1;
+section.active .title1{
+  animation: grows 4s linear forwards;
+  opacity: 1;
 }
 
-.sections.active .title1 h1{
+section.active .title1 h1{
   font-size: 70px;
   margin-top: 0;
 }
 
 @keyframes grows {
-	0%, 20% {
-		transform: scale(2);
+  0%, 20% {
+    transform: scale(2);
     bottom:-100%;
-	}
-	
-	75%, 100% {
-		transform: scale(.8);
+  }
+  
+  75%, 100% {
+    transform: scale(.8);
     bottom:72%;
-	}
-}
-
-.smartimg_Inner{
-  margin-left: -500px;
+  }
 }
 
 .smartimg{
-  margin: 0;
+  margin-left: -32%;
+  top: 26%;
 }
 
-.sections.active .smartimg{
+section.active .smartimg{
   animation: grown 4s linear forwards; 
 }
 
 @keyframes grown {
-	0%, 20% {
-		transform: scale(2);
+  0%, 20% {
+    transform: scale(2);
     bottom:-100%;
-	}
-	
-	75%, 100% {
-		transform: scale(.2);
+  }
+  
+  75%, 100% {
+    transform: scale(.2);
     bottom:85%;
-	}
+  }
 }
 
 
@@ -326,13 +323,36 @@ header .logo{
   width: 300px;
 }
 
-.sections.active .dairyimg{
+section.active .dairyimg{
   animation: mymove 5s linear;
   transition-delay: 1s;
   /* bottom: -860px; */
   margin-right: 36%;
   opacity: 1;
   right: 0;
+}
+
+.smartimg_Inner_b{
+  margin-left: -21%;
+  margin-bottom: -40%;
+}
+
+section.active .smartimg{
+  animation: stgrown 4s linear forwards; 
+}
+
+@keyframes stgrown {
+  0%, 20% {
+    transform: scale(2);
+    bottom:0;
+    opacity: 0;
+  }
+  
+  75%, 100% {
+    transform: scale(.1);
+    bottom:100%;
+    opacity: 1;
+  }
 }
 
 
@@ -345,28 +365,28 @@ header .logo{
 
 .blocksection.page2 {
   background: rgba(255, 255, 0, 0.932);
-  top: 100%;
+  /* top: 100%;
   left: 0;
-  position: absolute;
+  position: absolute; */
 }
 
 .blocksection.page3 {
   background: rgb(117, 207, 0);
-  top: 200%;
+  /* top: 200%;
   left: 0;
-  position: absolute;
+  position: absolute; */
 }
 
 .blocksection.page4 {
   background: rgb(196, 0, 179);
-  top: 300%;
+  /* top: 300%;
   left: 0;
-  position: absolute;
+  position: absolute; */
 }
 
 .content .blocksection {
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
 }
 /* .main section {
   overflow: hidden;
@@ -377,3 +397,76 @@ header .logo{
   to {left: 0;}
 } */
 
+
+.laptopimg{
+  position: absolute;
+    left: 50%;
+    right: 0;
+    top: 0;
+    margin-left: -40%;
+}
+
+section.active .laptopimg{
+  animation: lpgrow 4s linear forwards;
+  opacity: 1;
+}
+
+@keyframes lpgrow {
+  0%, 20% {
+    transform: scale(2);
+  }
+  
+  75%, 100% {
+    transform: scale(.8);
+  }
+}
+
+
+section.active .fade-in-image {
+  animation: fadeIn 20s;
+  position: absolute;
+  left: 50%;
+  top: 20%;
+  margin-left: -5%;
+}
+
+.fade-in-image h1{
+  font-size: 50px;
+  margin-top: 0;
+  color: #fff;
+  letter-spacing: 5px;
+  text-align: left;
+}
+
+@keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+.fade-in-image p{
+  font-size: 15px;
+  color: #fff;
+  width: 310px;
+  text-align: left;
+}
+
+section.active  .smartimg .title1{
+  margin-bottom: -20%;
+  margin-left: -30%;
+}
+
+section {
+  width: 100vw;
+  height: 82%;
+  position: absolute;
+  top: 65px;
+  left: 0;
+  color:white;
+  background-color: black;
+  visibility: hidden;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+}
+section.active {
+  visibility: visible;
+}
