--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -182,6 +182,8 @@ header .logo {
   left: 50%;
   transform: translateX(-50%);
   max-width: 30px;
+  cursor: pointer;
+  z-index: 3333;
 }
 
 .info .infoImage {
