--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -5,7 +5,7 @@ body {
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
-  overflow: hidden;
+  overflow-x: hidden;
   display: flex;
   align-items: center;
   height: 100vh;
