--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -5,7 +5,7 @@ body {
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
-  overflow-x: hidden;
+  overflow: hidden;
   display: flex;
   align-items: center;
   height: 100vh;
@@ -252,6 +252,58 @@ section.active .tabletimg {
   animation: grow 2s linear forwards;
   opacity: 1;
 }
+section.active .tabletimg_ {
+  animation: zoom-in-zoom-in 2s linear forwards;
+  position: absolute;
+  left: 32.1%;
+  opacity: 1;
+  top: 40px;
+}
+section.active .section_old{
+  animation: zoom-in-zoom-out 2s linear forwards ;
+  opacity: 1;
+  position: absolute;
+  z-index: 99;
+  left: 60.1%;
+  
+
+}
+
+@keyframes zoom-in-zoom-out {
+  0%,
+  20% {
+    transform: scale(1);
+    width: 364px;
+    left: 34.8%;
+    top: 0;
+  
+    
+  }
+
+  75%,
+  100% {
+    transform: scale(0.5);
+    width: 22%;
+    left: 40.1%;
+    top:-50px
+  }
+}
+@keyframes zoom-in-zoom-in {
+  0%,
+  20% {
+    transform: scale(1);
+    width: 640px;
+    opacity: 0;
+    left: 24.1%;
+  }
+
+  75%,
+  100% {
+    transform: scale(1);
+    width: 22%;
+    left: 38.1%;
+  }
+}
 
 @keyframes grow {
   0%,
@@ -285,7 +337,9 @@ section.active .title1 {
 section.active .title1 h1 {
   font-size: 40px;
   margin-top: 0;
-  letter-spacing: 3px;
+  letter-spacing: 4px;
+  font-weight: bold;
+  margin-left: 40px;
 }
 
 @keyframes grows {
@@ -980,6 +1034,7 @@ section.active {
   section.active .title1 h1 {
     font-size: 36px;
     margin-top: 0;
+    font-weight: bold;
   }
 
   .smartimg {
