--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -11,6 +11,9 @@ body {
   height: 100vh;
   font-family: "Montserrat", sans-serif;
 }
+html {
+  scroll-behavior: smooth;
+}
 #root {
   width: 100%;
   padding: 0 15px;
@@ -1173,7 +1176,7 @@ section.active .optimize .opt_glass {
 @keyframes optglassgrow {
   0%,
   20% {
-    transform: scale(3);
+    transform: scale(1.5);
     top: 0;
     left: 0%;
     margin-left: 0;
@@ -1414,7 +1417,7 @@ section.active {
   @keyframes optglassgrow {
     0%,
     20% {
-      transform: scale(3);
+      transform: scale(1.5);
       top: 0;
       left: 0%;
       margin-left: 0;
@@ -1719,7 +1722,7 @@ section.active {
   @keyframes optglassgrow {
     0%,
     20% {
-      transform: scale(3);
+      transform: scale(1.5);
       top: 0;
       left: 0%;
       margin-left: 0;
@@ -2102,7 +2105,7 @@ section.active {
   @keyframes optglassgrow {
     0%,
     20% {
-      transform: scale(3);
+      transform: scale(1.3);
       top: 0;
       left: 0%;
       margin-left: 0;
@@ -2461,7 +2464,7 @@ section.active {
   @keyframes optglassgrow {
     0%,
     20% {
-      transform: scale(3);
+      transform: scale(1.5);
       top: 0;
       left: 0%;
       margin-left: 0;
